--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@ body {
     color: #515A5F;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
+    height:100%;
+    overflow: hidden;
 }
 
 .amaga{
@@ -69,6 +71,12 @@ Menu Top
 #search{
     border: 1px solid black;
     padding: 3px 15px;
+}
+
+.page-wrap{
+    width:100%;
+    overflow-y:scroll;
+    height:90%;
 }
 
 .container{
